[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/FX/shot-right-01.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Guns/Hold/W_83_Mauser_Hold.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Guns/W_83_Mauser.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[sub_resource type="Animation" id=2]
resource_name = "Click"
length = 0.15
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 0 ), Vector2( -3, 0 ), Vector2( 6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite/Sprite:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Melee_Area/CollisionShape2D:disabled")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Gun_Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("POS_Gun/Gun_Sprite/Gun_Sprite2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("POS_Gun/Gun_Sprite/Gun_Sprite2:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Melee"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, -85.0, -45.0, -10.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Melee_Area/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Gun_Sprite/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("POS_Gun/Gun_Sprite/Gun_Sprite2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("POS_Gun/Gun_Sprite/Gun_Sprite2:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Reload"
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite/Sprite:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Melee_Area/CollisionShape2D:disabled")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Gun_Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("POS_Gun/Gun_Sprite/Gun_Sprite2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.025, 0.25, 0.475, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( -7, -5 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("POS_Gun/Gun_Sprite/Gun_Sprite2:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.025, 0.475, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, -1 ), Vector2( 1, -1 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shell"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.15
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 0 ), Vector2( 4, 0 ), Vector2( 6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite/Sprite:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.025, 0.075, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 4, 3, 2, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Melee_Area/CollisionShape2D:disabled")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Gun_Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("POS_Gun/Gun_Sprite/Gun_Sprite2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("POS_Gun/Gun_Sprite/Gun_Sprite2:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="W_83_Mauser_Hold" type="Node2D"]
script = ExtResource( 2 )
gun_num = 83
damage = 100
dmg_type = "Bullet"
ammo_max = 90
eject_shell = false
walk_amount = 8.0

[node name="Shoot_Timer" type="Timer" parent="."]
wait_time = 0.55

[node name="Melee_Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="POS_Gun" type="Node2D" parent="."]

[node name="Gun_Sprite" type="Sprite" parent="POS_Gun"]
position = Vector2( -1, 0 )
texture = ExtResource( 3 )
hframes = 2

[node name="Sprite" type="Sprite" parent="POS_Gun/Gun_Sprite"]
position = Vector2( 32, -2 )
texture = ExtResource( 1 )
hframes = 5

[node name="Gun_Sprite2" type="Sprite" parent="POS_Gun/Gun_Sprite"]
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="POS" type="Node2D" parent="POS_Gun"]
visible = false

[node name="Shell" type="Position2D" parent="POS_Gun/POS"]
position = Vector2( 3, -2 )

[node name="Shoot" type="Position2D" parent="POS_Gun/POS"]
position = Vector2( 33, -2 )

[node name="Throw" type="Position2D" parent="POS_Gun/POS"]
position = Vector2( 36, 0 )

[node name="Raycast" type="Node2D" parent="POS_Gun"]
visible = false

[node name="Shoot" type="RayCast2D" parent="POS_Gun/Raycast"]
position = Vector2( -14, -2 )
enabled = true
cast_to = Vector2( 55, 0 )
collision_mask = 4278225672

[node name="Melee" type="RayCast2D" parent="POS_Gun/Raycast"]
enabled = true
cast_to = Vector2( 28, 0 )
collision_mask = 4278192128

[node name="Throw" type="RayCast2D" parent="POS_Gun/Raycast"]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 4278192648

[node name="Melee_Area" type="Area2D" parent="POS_Gun"]
visible = false
collision_layer = 0
collision_mask = 4278618752

[node name="CollisionShape2D" type="CollisionShape2D" parent="POS_Gun/Melee_Area"]
position = Vector2( 14, 0 )
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Click = SubResource( 2 )
anims/Melee = SubResource( 3 )
anims/RESET = SubResource( 6 )
anims/Reload = SubResource( 4 )
anims/Shoot = SubResource( 5 )

[connection signal="timeout" from="Shoot_Timer" to="." method="_on_Shoot_Timer_timeout"]
[connection signal="timeout" from="Melee_Timer" to="." method="_on_Melee_Timer_timeout"]
[connection signal="body_entered" from="POS_Gun/Melee_Area" to="." method="_on_Melee_Area_body_entered"]
